[package]
name = "rs-key-value"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
